Fixed the message content alignment

--- a/application/M3/SFSUAccess/react-frontend/src/css/Dashboard.css
+++ b/application/M3/SFSUAccess/react-frontend/src/css/Dashboard.css
@@ -35,8 +35,6 @@
 }
 
 .messageContent p{
-  height: 18px;
-  width: 250px;
   padding: 0;
   overflow: hidden;
   position: relative;
